# secret-agents-submission

./: .gitignore  README.md  TESTTEST.py  compose.yaml
backend/: .dockerignore  Dockerfile  pyproject.toml  requirements.txt  server.py
backend/src/text_response_automation/: crew.py  main.py
backend/src/text_response_automation/config/: agents.yaml  tasks.yaml
frontend/: Dockerfile
frontend/src/: index.html  script.js  serve.py  style.css
