[project]
name = "text_response_automation"
version = "0.1.0"
description = "text_response_automation using crewAI"
authors = [{ name = "Amrita", email = "everyone@amrita.edu" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.177.0,<1.0.0"
]

[project.scripts]
text_response_automation = "text_response_automation.main:run"
run_crew = "text_response_automation.main:run"
train = "text_response_automation.main:train"
replay = "text_response_automation.main:replay"
test = "text_response_automation.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
